<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/sb_hook_display_just_re"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hook_display_just_re"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/sb_hook_hide_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hook_hide_notification"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/sb_hook_delay_fuck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hook_delay_fuck"
            android:textSize="15sp"/>
        <LinearLayout
            android:id="@+id/ll_delay_layout"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/et_delay_time"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:textSize="13sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/delay_sec"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>